hphp/hack/test/implemented_by_hhi/implemented_by_non_final.hhi.exp
ERROR: File "implemented_by_non_final.hhi", line 6, characters 5-19:
This attribute can only be used in final classes (Naming[2131])
ERROR: File "implemented_by_non_final.hhi", line 11, characters 5-19:
This attribute can only be used in final classes (Naming[2131])
